--- a/GenieNoteApp/package.json
+++ b/GenieNoteApp/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "@ui-kitten/components": "^5.1.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-calendars": "^1.1263.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.3.0",
     "react-native-svg": "^12.1.1",
+    "react-navigation": "^4.4.4",
     "recoil": "^0.3.1"
   },
   "devDependencies": {
@@ -23,7 +31,10 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.14.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1"
